# InstrumentTimbre

./: .flake8  .gitignore  Architecture_Refactoring_Plan.md  CONFIG_GUIDE.md  Code_Quality_Issues_Report.md  DEVELOPMENT_PLAN.md  InstrumentTimbre_Refactoring_Complete.md  Makefile  PROJECT_REFACTORING_PLAN.md  PROJECT_SUMMARY.md  Project_Optimization_Analysis.md  QUICK_START.md  README.md  README_REFACTORING_STATUS.md  __init__.py  app.py  config.py  config.yaml  convert_model.py  demo.json  demo.py  evaluate.py  main.py  practical_development_plan.md  predict.py  pyproject.toml  pytest.ini  quick_train_test.py  quick_week2_demo.py  requirements.txt  setup.py  test_melody_preservation.py  test_unified_compatibility.py  test_week5_emotion_engine.py  test_week6_music_understanding.py  tmp_rovodev_enhanced_training.py  train.py  train.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
InstrumentTimbre/: __init__.py  train_modernized.py
InstrumentTimbre/cli/: __init__.py  main.py
InstrumentTimbre/cli/commands/: __init__.py  convert.py  evaluate.py  predict.py  test.py  train.py  visualize.py
InstrumentTimbre/cli/utils/: config.py
InstrumentTimbre/core/: __init__.py
InstrumentTimbre/core/analysis/: emotion_analysis_engine.py  music_understanding_engine.py
InstrumentTimbre/core/data/: __init__.py  (+3 more)
InstrumentTimbre/modules/: __init__.py
InstrumentTimbre/scripts/: modernize_legacy.py  test_architecture.py
InstrumentTimbre/utils/: __init__.py  helpers.py  io.py  logging.py
audio/: __init__.py  processors.py
config/: default_config.yaml  unified_config.yaml
demo_conversion/: chinese_instrument_enhanced.onnx  chinese_instrument_enhanced_metadata.json  chinese_instrument_enhanced_script.pt  chinese_instrument_enhanced_script_metadata.json
docs/: README.md  api-reference.md  architecture.md  chinese-instruments.md  config-simplification-complete.md  installation.md  model-conversion.md  production_guide.md  professional-audio-processing-development.md  quality-assurance-development.md  quick-start.md  visualization.md
docs/examples/: advanced.md  basic.md
enhanced_visualizations/: feature_report.txt
example/: change_midi_instrument.py  enhanced_chinese_visualization.py  extract_timbre_features.py  timbre_extraction_visualization.py
example/extracted_features/: erhu1_timbre.json  erhu1_timbre.pkl  erhu2_timbre.json  erhu2_timbre.pkl  extraction_summary.json
models/: __init__.py  attention.py  decoders.py  encoders.py  model.py
scripts/: README.md  create_visualizations.sh  prepare_data.sh  prepare_short_clips.py  run.sh  run_tests.sh  standard_train.sh  test_predict.sh  train.sh
src/: __init__.py
src/api/: music_api.py
src/core/: __init__.py  controller.py  emotion_engine.py  music_analyzer.py  track_operator.py
tests/: __init__.py  professional_audio.py  quality_assurance.py  test_basic.py  test_chinese_features.py  test_simple_config.py  test_training.py  test_utils.py  test_week8_quality_assurance.py
tests/test_operations/: __init__.py  test_data_structures.py  test_intelligent_operations_integration.py  test_operation_dispatcher.py  test_week7_integration.py
utils/: __init__.py  cache.py  data.py  export.py  prepare_data.py
(+83 files in other folders)
