[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instrument-timbre-model"
version = "0.1.0"
description = "A toolkit for instrument timbre analysis, manipulation, and conversion."
authors = [
    { name="TimWood0x10", email="jinhopers@gmail.com" }
]

dependencies = [
    "numpy>=1.24.3",
    "scipy>=1.11.3",
    "pandas>=2.1.1",
    "joblib>=1.3.2",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "tensorboard>=2.14.0",
    "librosa>=0.10.1",
    "soundfile>=0.12.1",
    "pedalboard>=0.7.7",
    "demucs>=4.0.1",
    "matplotlib>=3.8.0",
    "tqdm>=4.66.1",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.1",
    "onnx>=1.14.1",
    "onnxruntime>=1.16.1"
]
requires-python = ">=3.8"
readme = "README.md"
license = { file = "LICENSE" }

[project.optional-dependencies]
develop = [
    "pytest>=8.3.5",
    "black>=23.9.1",
    "flake8>=6.1.0"
]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
